apps/homepage-external/kustomization/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage-external
  labels:
    gateway-access: public
