apps/homepage-external/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage-external-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage-external
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
    toPorts:
    - ports:
      - port: "3000"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage-external-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage-external
  egressDeny:
  - toEntities:
    - all
